--- a/src/sass/waves.sass
+++ b/src/sass/waves.sass
@@ -54,7 +54,8 @@
 
 .waves-button,
 .waves-icon
-  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC)
+  -webkit-transform: translateZ(0)
+  -webkit-image-mask: -webkit-radial-gradient(circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0))
 
 .waves-button,
 .waves-button:hover,
